--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/node": "^20.5.9",
     "eslint-config-upleveled": "^5.0.4",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.2",
+    "node-html-parser": "^6.1.6"
   }
 }
